close #2 add endpoint to create a lot of sectors
